--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.1.0",
     "geist": "^1.4.2",
     "lucide-react": "^0.539.0",
     "next": "15.2.4",
