--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,5 @@
   "categories": ["productivity", "business"],
   "lang": "en",
   "scope": "/",
-  "permissions": [
-    "notifications"
-  ]
+  "permissions": ["notifications"]
 }
