feat: add upload documents

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
     "geist": "^1.4.2",
     "lucide-react": "^0.539.0",
     "next": "15.2.4",
