--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "geist": "^1.4.2",
     "lucide-react": "^0.539.0",
     "next": "15.2.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -51,6 +52,7 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.101.3"
   }
 }
