chore: change titles and made the new button at top navbar common

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Kulan Space - Meetings Hub",
-  "short_name": "Kulan Space",
+  "name": "Chairman Office - Work management System",
+  "short_name": "Chairman Office",
   "description": "Modern meeting management application",
   "start_url": "/",
   "display": "standalone",
