--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-barcode": "^1.6.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "recharts": "^3.1.2",
